--- a/WebContent/css/accommodationList/detail.css
+++ b/WebContent/css/accommodationList/detail.css
@@ -1,3 +1,14 @@
+.main-container {
+    background: #F9FBFF;
+    border-top: 1px solid #F9FBFF;
+}
+
+.empty-line {
+    border-bottom: 1px solid rgba(199, 199, 199, 0.527);
+    width: 800px;
+    height: 60px;
+    margin: 0 auto;
+}
 
 .main{
 width: max-content;
@@ -69,7 +80,6 @@ margin: 50px auto 0px auto;
             padding-bottom: 10px;
         } 
         .main .title .main-info h2{
-            
             font-size: 20px;
             color: gray;
             margin: auto 0px;
@@ -79,11 +89,12 @@ margin: 50px auto 0px auto;
             font-weight: bold;
             color: #fc0453;
             margin: auto 0px;
+            font-size: 16px;
         }
         .main .title .main-info .rule{
             font-size: 15px;
-            padding-top: 80px;
-            padding-bottom: 10px;
+            padding-top: 50px;
+            padding-bottom: 30px;
             margin: auto 0px;
         }
         .main .title .main-info .check{
@@ -108,18 +119,47 @@ margin: 50px auto 0px auto;
 
 
         .room-sec {
-        
-            margin: 70px auto 0 auto;
+            margin: 40px auto 0 auto;
         }
+        
         .room-sec .subtitle{
             margin-left: auto;
             margin-right: auto;
             width: 800px;
         }
+
+            .room-sec .subtitle form {
+                margin-top: 20px;
+                border: 1px solid rgb(204, 204, 204);
+                width: 240px;
+                padding-left: 10px;
+                padding-top: 8px;
+                height: 120px;
+                border-radius: 5px;
+            }
+
+                .room-sec .subtitle form .date {
+                    margin-top: 5px;
+                }
+                
+                .submit-btn {
+                    width: 150px;
+                    height: 30px;
+                    margin-top: 10px;
+                    margin-left: 30px;
+                    border: none;
+                    background: #fc0453;
+                    color: white;
+                    border-radius: 3px;
+                    cursor: pointer;
+                }
+
+                .submit-btn:hover {
+                    opacity: 0.5;
+                }
         
-        
+
             .room-sec .subtitle h1 {
-                --border: 1px solid green;
                 width: 500px;
                 font-weight: bold;
                 font-size: 24px;
@@ -293,6 +333,11 @@ margin: 50px auto 0px auto;
                             color: white;
                             --font-weight: bold;
                             opacity: 0.8;
+                            cursor: pointer;
+                        }
+                        
+                        .room-detail-container .highlight-btn:hover {
+                            opacity: 0.5;
                         }
 
                         .room-form > .submit-btn-container  {
@@ -335,6 +380,71 @@ margin: 50px auto 0px auto;
                     color:  #fc0453;
                     text-decoration:blink
                 }
+
+
+                
+.review-section {
+    width: 800px;
+    margin: 50px auto 0 auto;
+}
+
+    .review-section h1 {
+        width: 500px;
+        font-weight: bold;
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    .review-section .review-info {
+        border-top: 1px solid rgba(160, 160, 160, 0.521);
+        border-bottom: 1px solid rgba(160, 160, 160, 0.521);;
+        padding: 10px 0;
+        text-align: center;
+        
+        margin: 0 auto 40px auto;
+    }
+
+        .review-section .review-info .review-span {
+            font-size: 22px;
+            font-weight: bold;
+        }
+
+        .review-section .review-info .review-total {
+            padding-top: 20px;
+            font-size: 14px;
+        }
+
+    .review-section .review {
+        margin-top: 10px;
+        display: flex;
+    }
+
+        .review-section .review .review-img {
+            width: 50px;
+            height: 50px;
+        }
+
+        .review-section .review .review-ment-container {
+            flex-basis: 500px;
+            padding-left: 15px;
+            margin-bottom: 20px;
+        }
+
+            .review-section .review .review-ment-container .review-title {
+                font-weight: bold;
+                font-size: 18px;
+            }
+
+            .review-section .review .review-ment-container .review-ment {
+                margin-top: 10px;
+            }
+
+            .review-section .review .review-ment-container .review-regdate {
+                margin-top: 5px;
+                color: rgb(75, 75, 75);
+                font-weight: lighter;
+            }
+
 img{
     object-fit :fill;
 }
