--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -59,8 +59,9 @@
                     opacity: 0.5;
                     top: 10px;
                     color: white;
-                    width: 70px;
+                    width: 100px;
                     height: 30px;
+                    font-size: 14px;
                 }
 
             .promotion-sec .promotion-item img{
@@ -76,21 +77,22 @@
                 font-size: 16px;
                 font-weight: bold;
             }
-            .promotion-sec .promotion-item .promotion-item-detail>h4{
-                font-size: 12px;
-                color: gray;
-                text-decoration: line-through;
-            }
+          
             .promotion-sec .promotion-item .promotion-item-detail>h3{
                 font-size: 14px;
                 color: red;
                 font-weight: bold;
+                padding-top: 5px;
             }
-            .promotion-sec .promotion-item .promotion-item-detail>h5{
+            .promotion-sec .promotion-item .promotion-item-detail>h4{
                 font-size: 14px;
                 padding: 5px 0;
                 width: 290px;
                 border-bottom: 1.5px solid rgb(160, 160, 160);
+            }
+            .promotion-sec .promotion-item .promotion-item-thumb>h2{
+              
+              padding-top : 5px;
             }
             .promotion-bar>div:nth-child(2)>div:first-child{
                 margin-left: 60px;
