--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -51,6 +51,8 @@
         }
             .promotion-sec .promotion-item .parent {
                 position: relative;
+                width:300px;
+                height:355px;
             }
 
                 .promotion-sec .promotion-item .parent .child {
