--- a/WebContent/css/admin/accommodations/applyList.css
+++ b/WebContent/css/admin/accommodations/applyList.css
@@ -41,11 +41,11 @@
             }
 
             .main .list-board > table td.col-sm { 
-                width: 100px;
+                width: 80px;
             }
 
             .main .list-board > table td.col-m { 
-                width: 150px;
+                width: 200px;
             }
             .main .list-board > table tbody tr:last-child >td{
                 border-bottom: 1px solid #ffffff;
@@ -84,4 +84,11 @@
             
                 .pager-container .btn a {
                     text-decoration: none;
+                }
+                .ellips{
+                    text-overflow:ellipsis;
+                    white-space:nowrap;
+                    word-wrap:normal;
+                    width:100px;
+                    overflow:hidden;
                 }
