역제안jsp 사진 에러 해결 및 각 페이지 null 처리

--- a/WebContent/css/company/accommodation/reg.css
+++ b/WebContent/css/company/accommodation/reg.css
@@ -120,6 +120,7 @@ main{
         margin-right: auto;
         padding-top: 30px;
         padding-left: 10px;
+        margin-bottom: 100px;
     }
     .submit-btn{
         margin-left: auto;
