--- a/WebContent/css/admin/accommodations/applyDetail.css
+++ b/WebContent/css/admin/accommodations/applyDetail.css
@@ -269,12 +269,15 @@
                 .room-form > .submit-btn-container > .submit-btn:hover {
                     opacity: 0.7;
                 }
-                .btn-box{
-                    width: 105px;
-                    margin-left: auto;
-                }
-                .btn-box .btn{
-                    margin-bottom: 30px;
-                    width: 50px;
-                    height: 30px;
+
+                .btn-cancel {
+                    width: 80px;
+                    height: 25px;
+                    margin: 0 5px 0 5px;
+                    border:1px solid #000000;
+                    border-radius: 4px;
+                    display:inline-block;
+                    text-decoration:none;
+                    background: #EFEFEF;
+                    font-size :15.5px;
                 }
