--- a/WebContent/css/admin/accommodations/detail.css
+++ b/WebContent/css/admin/accommodations/detail.css
@@ -270,12 +270,15 @@
                             opacity: 0.7;
                         }
 
-                        .btn-box{
-                            width: 50px;
-                            margin-left: auto;
-                        }
-                        .btn-box .btn{
-                            margin-bottom: 30px;
-                            width: 50px;
-                            height: 30px;
+
+                        .btn-cancel {
+                            width: 80px;
+                            height: 25px;
+                            margin: 0 5px 0 5px;
+                            border:1px solid #000000;
+                            border-radius: 4px;
+                            display:inline-block;
+                            text-decoration:none;
+                            background: #EFEFEF;
+                            font-size :15.5px;
                         }
