--- a/WebContent/css/accommodationList/detail.css
+++ b/WebContent/css/accommodationList/detail.css
@@ -404,7 +404,16 @@ margin: 50px auto 0px auto;
                 .goodsonmylist a:hover{
                     background: white;
                     color:  #fc0453;
-                    text-decoration:blink
+                    text-decoration:blink;
+                }
+                .zzimed{
+                	background: white;
+                    color:  #fc0453;
+                    text-decoration:blink;
+                }
+                .unzzimed{
+                	background: white;
+                    color : black;
                 }
 
 
