--- a/WebContent/css/company/userInfo/myAccommodationLists.css
+++ b/WebContent/css/company/userInfo/myAccommodationLists.css
@@ -69,10 +69,12 @@
         font-size: 12px;
     }
     .reservation-list-sec>h1{
-        width: 500px;
+        width: 100%;
         font-weight: bold;
         font-size: 28px;
-        margin: 50px 0 30px 0;
+        margin: 30px 0 30px 0;
+        border-bottom:4px solid #000000;
+        padding-bottom:30px;
     }
     .category-bar{
         height: 140px;
