--- a/WebContent/css/company/userInfo/updateInfo.css
+++ b/WebContent/css/company/userInfo/updateInfo.css
@@ -70,10 +70,12 @@
             }
 
             .update-info-sec>h1{
-                width: 500px;
-                font-weight: bold;
-                font-size: 28px;
-                margin: 50px 0 30px 0;
+                width: 100%;
+	            font-weight: bold;
+	            font-size: 28px;
+	            margin: 30px 0 30px 0;
+	            border-bottom:4px solid #000000;
+	            padding-bottom:30px;
             }
                 .update-info-sec>div{
                     padding: 50px 100px;
