--- a/WebContent/css/user/userInfo/goodsOnMyList.css
+++ b/WebContent/css/user/userInfo/goodsOnMyList.css
@@ -69,10 +69,12 @@
                 font-size: 12px;
             }
             .picked-item-sec > h1{
-                width: 500px;
-                font-weight: bold;
-                font-size: 24px;
-                margin: 50px 0 60px 30px;
+                width: 100%;
+	            font-weight: bold;
+	            font-size: 28px;
+	            margin: 30px 0 30px 0;
+	            border-bottom:4px solid #000000;
+	            padding-bottom:30px;
             }
 
             .picked-item-sec>div{
