--- a/WebContent/css/user/userInfo/memberInfo.css
+++ b/WebContent/css/user/userInfo/memberInfo.css
@@ -73,10 +73,12 @@
 				margin: 0 auto;
 			}
             .member-info-sec>h1{
-                width: 500px;
-                font-weight: bold;
-                font-size: 28px;
-                margin: 50px 0 30px 0;
+                width: 100%;
+	            font-weight: bold;
+	            font-size: 28px;
+	            margin: 30px 0 30px 0;
+	            border-bottom:4px solid #000000;
+	            padding-bottom:30px;
             }
             .member-info-sec>div:nth-child(2){
                 margin-top: 70px;
